--- a/MachineLearning.Net.LinearRegression/MachineLearning.Net.LinearRegression.csproj
+++ b/MachineLearning.Net.LinearRegression/MachineLearning.Net.LinearRegression.csproj
@@ -43,11 +43,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Univariate\CostFunction.cs" />
     <Compile Include="DataLoader.cs" />
+    <Compile Include="Univariate\GradientDescent.cs" />
+    <Compile Include="Univariate\PredictorFunction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrainingSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Multivariate\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
